<resources>
    <string name="app_name">Quiz</string>
    <string name="firstname">First Name :</string>
    <string name="lastname">Last Name :</string>
    <string name="nickname">Nickname :</string>
    <string name="age">Age :</string>
    <string name="enter_your_nickname">Enter your Nickname</string>
    <string name="enter_your_last_name">Enter your Last Name</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="quiz_starts">Start Quiz</string>
    <string name="score_">Score :</string>
    <string name="your_score_here">Your Score Here</string>
</resources>
