<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/firstname"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstname"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/lastname"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastname"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/nickname"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/age_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nickname"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/age"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="33dp"
        android:layout_toEndOf="@+id/firstname"
        android:ems="10"
        android:hint="@string/enter_your_first_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:windowSoftInputMode="adjustResize"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fname"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="33dp"
        android:layout_toEndOf="@+id/firstname"
        android:ems="10"
        android:hint="@string/enter_your_last_name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:windowSoftInputMode="adjustResize"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/nname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lname"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="34dp"
        android:layout_toEndOf="@+id/nickname"
        android:ems="10"
        android:hint="@string/enter_your_nickname"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:windowSoftInputMode="adjustResize"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nname"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="31dp"
        android:layout_toEndOf="@+id/age_"
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        android:textSize="14sp"
        android:windowSoftInputMode="adjustResize"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="129dp"
        android:text="@string/quiz_starts" />

    <TextView
        android:id="@+id/score_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="116dp"
        android:text="@string/score_"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/score_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_marginStart="97dp"
        android:layout_marginTop="103dp"
        android:layout_toEndOf="@+id/score_"
        android:text="@string/your_score_here"
        android:textSize="14sp" />
</RelativeLayout>